# 020725_AutoKMeans

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: default.yaml
scripts/: preprocess.sh
src/application/: app.py  navigation.py
src/application/pages/: clustering.py  method_ai_smart.py  method_selection.py  results.py  upload.py
src/clustering/: base_metric.py  benchmark.py  distance_selector.py  engine.py
src/clustering/distance_metrics/: __init__.py  binary.py  distribution.py  graph_structural.py  mixed_type.py  numeric.py  time_series.py  universal.py
src/data/: clean_data.py  loader.py  sample_data.py
src/pipeline/: orchestrator.py
src/utils/: config_loader.py  data_type_detector.py  logger.py  metrics.py
src/visualization/: cluster_plot.py  convergence_plot.py  silhouette_plot.py
tests/: test_distance_metrics.py  test_engine.py  test_loader.py
